<resources>
    <string name="app_name">Client</string>
    <string name="surnameTextView">Surname</string>
    <string name="surnameHint">your surname</string>
    <string name="firstnameTextView">First name</string>
    <string name="firstnameHint">your first name</string>
    <string name="matriculationNumberTextView">Matriculation Number</string>
    <string name="matriculationNumberHint">e.g 1313211</string>
    <string name="courseTextView">Select Course</string>
    <string name="registerButton">Register</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="attendButton_text">Attend</string>
    <string name="jsonButton">Confirm</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="success">Success!</string>
    <string name="redeemButton">Redeem Trophy!</string>
</resources>
