<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="321dp"
        android:layout_height="317dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/surnameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surnameTextView"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/surnameEditText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/surnameHint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/firstnameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstnameTextView"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/firstnameEditText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstnameHint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/matNumTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matriculationNumberTextView"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/matNumEditText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/matriculationNumberHint"
            android:inputType="number" />

        <TextView
            android:id="@+id/courseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/courseTextView"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Spinner
            android:id="@+id/courseSpinner"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:text="@string/registerButton" />

</RelativeLayout>